--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
-    assistant-manager-app:
-        image: assistant-manager
+    planty-assistant-manager-app:
+        image: planty-assistant-manager
         environment:
             # Set by Hadi
             # - _JAVA_OPTIONS=-Xmx512m -Xms256m
@@ -17,10 +17,10 @@ services:
             - 8080:8080
         # Added by Hadi
         mem_limit: 288m
-    assistant-manager-mongodb:
+    planty-assistant-manager-mongodb:
         extends:
             file: mongodb.yml
-            service: assistant-manager-mongodb
+            service: planty-assistant-manager-mongodb
         # Added by Hadi
         mem_limit: 64m
     # Commented out by Hadi
