--- a/src/main/docker/sonar.yml
+++ b/src/main/docker/sonar.yml
@@ -1,6 +1,6 @@
 version: '2'
 services:
-    assistant-manager-sonar:
+    planty-assistant-manager-sonar:
         image: sonarqube:7.1-alpine
         ports:
             - 9000:9000
