--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -34,7 +34,7 @@ management:
 
 spring:
     application:
-        name: assistant-manager
+        name: planty-assistant-manager
     profiles:
         # The commented value for `active` can be replaced with valid Spring profiles to load.
         # Otherwise, it will be filled in by maven when building the WAR file
@@ -79,11 +79,11 @@ jhipster:
         #allow-credentials: true
         #max-age: 1800
     mail:
-        from: assistant-manager@localhost
+        from: planty-assistant-manager@localhost
     swagger:
         default-include-pattern: /api/.*
-        title: assistant-manager API
-        description: assistant-manager API documentation
+        title: planty-assistant-manager API
+        description: planty-assistant-manager API documentation
         version: 0.0.1
         terms-of-service-url:
         contact-name:
