Configuring a mail relay

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -53,8 +53,8 @@ spring:
     mail:
         host: smtp.gmail.com
         port: 587
-        username: macpersia.it@gmail.com  #Replace this field with your Gmail username.
-        #password: ************           #Replace this field with your Gmail password.
+        username: ${MY_GMAIL_ADDRESS}  #Replace this field with your Gmail username.
+        password: ${MY_GMAIL_PASSWORD} #Replace this field with your Gmail password.
         protocol: smtp
         tls: true
         properties.mail.smtp:
