--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -6,7 +6,7 @@
     },
     "jhipsterVersion": "5.0.2",
     "applicationType": "monolith",
-    "baseName": "assistant-manager",
+    "baseName": "planty-assistant-manager",
     "packageName": "be.planty.managers.assistant",
     "packageFolder": "be/planty/managers/assistant",
     "serverPort": "8080",
