--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "assistant-manager",
+  "name": "planty-assistant-manager",
   "version": "0.0.1",
-  "description": "Assistant Manager",
+  "description": "Planty Assistant Manager",
   "private": true,
   "license": "UNLICENSED",
   "cacheDirectories": [
@@ -55,12 +55,11 @@
     "file-loader": "1.1.11",
     "fork-ts-checker-webpack-plugin": "0.4.1",
     "friendly-errors-webpack-plugin": "1.7.0",
-    "generator-jhipster": "5.1.0",
+    "generator-jhipster": "5.0.2",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
     "husky": "0.14.3",
     "jest": "22.4.3",
-    "jest-junit": "5.1.0",
     "jest-preset-angular": "5.2.2",
     "jest-sonar-reporter": "2.0.0",
     "lint-staged": "7.0.0",
@@ -128,6 +127,6 @@
   },
   "jestSonar": {
     "reportPath": "target/test-results/jest",
-    "reportFile": "TESTS-results-sonar.xml"
+    "reportFile": "TESTS-results.xml"
   }
 }
