--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -19,6 +19,14 @@ logging:
         io.github.jhipster: DEBUG
         be.planty.managers.assistant: DEBUG
 
+eureka:
+    instance:
+        prefer-ip-address: true
+    client:
+        enabled: false # By default, the JHipster Registry is not used in the "dev" profile
+        service-url:
+            defaultZone: http://admin:${jhipster.registry.password}@localhost:8761/eureka/
+
 spring:
     profiles:
         active: dev
@@ -30,20 +38,35 @@ spring:
             enabled: false # we use Webpack dev server + BrowserSync for livereload
     jackson:
         serialization.indent_output: true
-    cloud:
-        # Commented out by Hadi
-#        stream:
-#            kafka:
-#                binder:
-#                    brokers: localhost
-#                    zk-nodes: localhost
-#            bindings:
-#                output:
-#                    destination: topic-jhipster
+    # Migrating to MariaDB by Hadi
     data:
         mongodb:
             uri: mongodb://localhost:27017
             database: planty-assistant-manager
+    # Migrating to MariaDB by Hadi
+    datasource:
+        type: com.zaxxer.hikari.HikariDataSource
+        url: jdbc:h2:file:./target/h2db/db/planty-assistant-manager;DB_CLOSE_DELAY=-1
+        username: planty-assistant-manager
+        password:
+    h2:
+        console:
+            enabled: false
+    jpa:
+        database-platform: io.github.jhipster.domain.util.FixedH2Dialect
+        database: H2
+        show-sql: true
+        properties:
+            hibernate.id.new_generator_mappings: true
+            hibernate.cache.use_second_level_cache: true
+            hibernate.cache.use_query_cache: false
+            hibernate.generate_statistics: true
+            hibernate.cache.region.factory_class: com.hazelcast.hibernate.HazelcastCacheRegionFactory
+            hibernate.cache.hazelcast.instance_name: planty-assistant-manager
+            hibernate.cache.use_minimal_puts: true
+            hibernate.cache.hazelcast.use_lite_member: true
+    liquibase:
+        contexts: dev
     # Changed by Hadi
 #    mail:
 #        host: localhost
@@ -65,6 +88,12 @@ spring:
         cache-duration: PT1S # 1 second, see the ISO 8601 standard
     thymeleaf:
         cache: false
+    zipkin: # Use the "zipkin" Maven profile to have the Spring Cloud Zipkin dependencies
+        base-url: http://localhost:9411
+        enabled: false
+        locator:
+            discovery:
+                enabled: true
 
 # ===================================================================
 # To enable SSL, generate a certificate using:
@@ -96,9 +125,13 @@ jhipster:
     http:
         version: V_1_1 # To use HTTP/2 you will need SSL support (see above the "server.ssl" configuration)
     cache: # Cache configuration
-        ehcache: # Ehcache configuration
-            time-to-live-seconds: 3600 # By default objects stay 1 hour in the cache
-            max-entries: 100 # Number of objects in each cache entry
+        hazelcast: # Hazelcast distributed cache
+            time-to-live-seconds: 3600
+            backup-count: 1
+            management-center: # Full reference is available at: http://docs.hazelcast.org/docs/management-center/3.9/manual/html/Deploying_and_Starting.html
+                enabled: false
+                update-interval: 3
+                url: http://localhost:8180/mancenter
     # CORS is only enabled by default with the "dev" profile, so BrowserSync can access the API
     cors:
         allowed-origins: "*"
