--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -19,26 +19,51 @@ logging:
         be.planty.managers.assistant: INFO
         io.github.jhipster: INFO
 
+eureka:
+    instance:
+        prefer-ip-address: true
+    client:
+        service-url:
+            defaultZone: http://admin:${jhipster.registry.password}@localhost:8761/eureka/
+
 spring:
     devtools:
         restart:
             enabled: false
         livereload:
             enabled: false
-    cloud:
-        # Commented out by Hadi
-#        stream:
-#            kafka:
-#                binder:
-#                    brokers: localhost
-#                    zk-nodes: localhost
-#            bindings:
-#                output:
-#                    destination: topic-jhipster
+    # Migrating to MariaDB by Hadi
     data:
         mongodb:
             uri: mongodb://localhost:27017
             database: planty-assistant-manager
+    # Migrating to MariaDB by Hadi
+    datasource:
+        type: com.zaxxer.hikari.HikariDataSource
+        url: jdbc:mariadb://localhost:3306/planty-assistant-manager
+        username: root
+        password:
+        hikari:
+            data-source-properties:
+                cachePrepStmts: true
+                prepStmtCacheSize: 250
+                prepStmtCacheSqlLimit: 2048
+                useServerPrepStmts: true
+    jpa:
+        database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+        database: MYSQL
+        show-sql: false
+        properties:
+            hibernate.id.new_generator_mappings: true
+            hibernate.cache.use_second_level_cache: true
+            hibernate.cache.use_query_cache: false
+            hibernate.generate_statistics: false
+            hibernate.cache.region.factory_class: com.hazelcast.hibernate.HazelcastCacheRegionFactory
+            hibernate.cache.hazelcast.instance_name: planty-assistant-manager
+            hibernate.cache.use_minimal_puts: true
+            hibernate.cache.hazelcast.use_lite_member: true
+    liquibase:
+        contexts: prod
     mail:
 #        host: localhost
 #        port: 25
@@ -58,6 +83,12 @@ spring:
             auth: true
     thymeleaf:
         cache: true
+    zipkin: # Use the "zipkin" Maven profile to have the Spring Cloud Zipkin dependencies
+        base-url: http://localhost:9411
+        enabled: false
+        locator:
+            discovery:
+                enabled: true
 
 # ===================================================================
 # To enable SSL, generate a certificate using:
@@ -97,13 +128,17 @@ jhipster:
         cache: # Used by the CachingHttpHeadersFilter
             timeToLiveInDays: 1461
     cache: # Cache configuration
-        ehcache: # Ehcache configuration
-            time-to-live-seconds: 3600 # By default objects stay 1 hour in the cache
-            max-entries: 1000 # Number of objects in each cache entry
+        hazelcast: # Hazelcast distributed cache
+            time-to-live-seconds: 3600
+            backup-count: 1
+            management-center: # Full reference is available at: http://docs.hazelcast.org/docs/management-center/3.9/manual/html/Deploying_and_Starting.html
+                enabled: false
+                update-interval: 3
+                url:
     security:
         authentication:
             jwt:
-                secret: a045521f35d0a430e06c24b46ba46aab218e0973
+                secret: c3759711a97d07d14b287908654591e749eb4eb6
                 # Token is valid 24 hours
                 token-validity-in-seconds: 86400
                 token-validity-in-seconds-for-remember-me: 2592000
