--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -7,25 +7,25 @@ services:
             # - _JAVA_OPTIONS=-Xmx512m -Xms256m
             - _JAVA_OPTIONS=-Xmx256m -Xms128m
             - SPRING_PROFILES_ACTIVE=prod,swagger
+            # Commented by Hadi
+            #- EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://admin:$${jhipster.registry.password}@jhipster-registry:8761/eureka
+            #- SPRING_CLOUD_CONFIG_URI=http://admin:$${jhipster.registry.password}@jhipster-registry:8761/config
+            ## Migrating to MariaDB by Hadi
+            #- SPRING_DATA_MONGODB_URI=mongodb://planty-assistant-manager-mongodb:27017
+            #- SPRING_DATA_MONGODB_DATABASE=planty-assistant-manager
             # Migrating to MariaDB by Hadi
-            - SPRING_DATA_MONGODB_URI=mongodb://planty-assistant-manager-mongodb:27017
-            - SPRING_DATA_MONGODB_DATABASE=planty-assistant-manager
-            # Migrating to MariaDB by Hadi
-            - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://admin:$${jhipster.registry.password}@jhipster-registry:8761/eureka
-            - SPRING_CLOUD_CONFIG_URI=http://admin:$${jhipster.registry.password}@jhipster-registry:8761/config
             - SPRING_DATASOURCE_URL=jdbc:mariadb://planty-assistant-manager-mariadb:3306/planty-assistant-manager
-            - JHIPSTER_SLEEP=30 # gives time for the JHipster Registry to boot before the application
         ports:
             - 8080:8080
         # Added by Hadi
         mem_limit: 288m
-    # Migrating to MariaDB by Hadi
-    planty-assistant-manager-mongodb:
-        extends:
-            file: mongodb.yml
-            service: planty-assistant-manager-mongodb
-        # Added by Hadi
-        mem_limit: 64m
+    ## Migrating to MariaDB by Hadi
+    #planty-assistant-manager-mongodb:
+    #    extends:
+    #        file: mongodb.yml
+    #        service: planty-assistant-manager-mongodb
+    #    # Added by Hadi
+    #    mem_limit: 64m
     # Migrating to MariaDB by Hadi
     planty-assistant-manager-mariadb:
         extends:
@@ -33,12 +33,13 @@ services:
             service: planty-assistant-manager-mariadb
         # Added by Hadi
         mem_limit: 64m
-    jhipster-registry:
-        extends:
-            file: jhipster-registry.yml
-            service: jhipster-registry
-        environment:
-            - SPRING_CLOUD_CONFIG_SERVER_NATIVE_SEARCH_LOCATIONS=file:./central-config/docker-config/
-        # Added by Hadi
-        mem_limit: 64m
+    # Commented by Hadi
+    #jhipster-registry:
+    #    extends:
+    #        file: jhipster-registry.yml
+    #        service: jhipster-registry
+    #    environment:
+    #        - SPRING_CLOUD_CONFIG_SERVER_NATIVE_SEARCH_LOCATIONS=file:./central-config/docker-config/
+    #    # Added by Hadi
+    #    mem_limit: 1g
 
