users.csv should not go to source repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Added by Hadi, due to secret key exposure
 .yo-rc.json
+src/main/resources/config/liquibase/users.csv
 
 ######################
 # Project Specific
