--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -33,4 +33,7 @@ services:
     #        service: jhipster-registry
     #    environment:
     #        - SPRING_CLOUD_CONFIG_SERVER_COMPOSITE_0_TYPE=native
-            - SPRING_CLOUD_CONFIG_SERVER_COMPOSITE_0_SEARCH_LOCATIONS=file:./central-config/docker-config/
+    #        - SPRING_CLOUD_CONFIG_SERVER_COMPOSITE_0_SEARCH_LOCATIONS=file:./central-config/docker-config/
+    #    # Added by Hadi
+    #    mem_limit: 1g
+
