--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -75,7 +75,7 @@ spring:
 #        show-sql: true
         database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
         database: MYSQL
-        show-sql: true
+        show-sql: false
         properties:
             hibernate.id.new_generator_mappings: true
             hibernate.connection.provider_disables_autocommit: true
@@ -151,7 +151,7 @@ jhipster:
     security:
         authentication:
             jwt:
-		# Changed after jhipster upgrade (5.0.2 -> 5.8.2)
+                # Changed after jhipster upgrade (5.0.2 -> 5.8.2)
                 #secret: my-secret-token-to-change-in-production
                 # This token must be encoded using Base64 and be at least 256 bits long (you can type `openssl rand -base64 64` on your command line to generate a 512 bits one)
                 base64-secret: 19a972f523f7f9b077f0f74c208399c26531fbf9
