--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,10 @@
         <maven.version>3.0.0</maven.version>
         <java.version>1.8</java.version>
         <scala.version>2.12.6</scala.version>
-        <node.version>v10.15.0</node.version>
-        <npm.version>6.4.1</npm.version>
+        <!-- <node.version>v10.15.0</node.version> -->
+        <node.version>v14.17.6</node.version>
+        <!-- <npm.version>6.4.1</npm.version> -->
+        <npm.version>6.14.15</npm.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <project.testresult.directory>${project.build.directory}/test-results</project.testresult.directory>
