--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Added by Hadi, due to secret key exposure
 .yo-rc.json
 src/main/resources/config/liquibase/users.csv
+src/main/resources/config/liquibase/data/user.csv
 .env
 env.sh
 env.ps1
