--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .yo-rc.json
 src/main/resources/config/liquibase/users.csv
 src/main/resources/config/liquibase/data/user.csv
+src/main/resources/config/liquibase/data/user_authority.csv
 .env
 env.sh
 env.ps1
@@ -169,3 +170,6 @@ Desktop.ini
 # db dumps
 db-dumps/mongodb-all-collections.*
 db-dumps/mariadb-all-tables.*
+
+.apt_generated/
+.apt_generated_tests/
