--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -65,39 +65,41 @@ spring:
         prepStmtCacheSqlLimit: 2048
         useServerPrepStmts: true
   jpa:
-        database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
-        database: MYSQL
-        show-sql: false
-        properties:
-            hibernate.id.new_generator_mappings: true
-            hibernate.connection.provider_disables_autocommit: true
-            hibernate.cache.use_second_level_cache: true
-            hibernate.cache.use_query_cache: false
-            hibernate.generate_statistics: true
-            hibernate.cache.region.factory_class: com.hazelcast.hibernate.HazelcastCacheRegionFactory
-            hibernate.cache.hazelcast.instance_name: planty-assistant-manager
-            hibernate.cache.use_minimal_puts: true
-            hibernate.cache.hazelcast.use_lite_member: true
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    database: MYSQL
+    show-sql: false
+    properties:
+      # Changed by Hadi
+      hibernate.id.new_generator_mappings: false
+
+      hibernate.connection.provider_disables_autocommit: true
+      hibernate.cache.use_second_level_cache: true
+      hibernate.cache.use_query_cache: false
+      hibernate.generate_statistics: true
+      hibernate.cache.region.factory_class: com.hazelcast.hibernate.HazelcastCacheRegionFactory
+      hibernate.cache.hazelcast.instance_name: planty-assistant-manager
+      hibernate.cache.use_minimal_puts: true
+      hibernate.cache.hazelcast.use_lite_member: true
   liquibase:
     contexts: prod
   mail:
-# Changed by Hadi
-#        host: localhost
-#        port: 25
-#        username:
-#        password:
-        host: email-smtp.us-east-1.amazonaws.com
-        port: 465
-        username: ${PLANTY_SMTP_USERNAME}
-        password: ${PLANTY_SMTP_PASSWORD}
-        protocol: smtps
-        debug: false
-        properties.mail.smtp:
-            starttls.enable: true
-            starttls.required: true
-            ssl.enable: true
-        properties.mail.smtps:
-            auth: true
+    # Changed by Hadi
+    #        host: localhost
+    #        port: 25
+    #        username:
+    #        password:
+    host: email-smtp.us-east-1.amazonaws.com
+    port: 465
+    username: ${PLANTY_SMTP_USERNAME}
+    password: ${PLANTY_SMTP_PASSWORD}
+    protocol: smtps
+    debug: false
+    properties.mail.smtp:
+      starttls.enable: true
+      starttls.required: true
+      ssl.enable: true
+    properties.mail.smtps:
+      auth: true
   thymeleaf:
     cache: true
   sleuth:
@@ -180,7 +182,6 @@ jhipster:
       host: localhost
       port: 5000
       queue-size: 512
-
 # ===================================================================
 # Application specific properties
 # Add your own application properties here, see the ApplicationProperties class
