--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -128,7 +128,9 @@ spring:
     open-in-view: false
     properties:
       hibernate.jdbc.time_zone: UTC
-      hibernate.id.new_generator_mappings: true
+      # Changed by Hadi
+      hibernate.id.new_generator_mappings: false
+
       hibernate.connection.provider_disables_autocommit: true
       hibernate.cache.use_second_level_cache: true
       hibernate.cache.use_query_cache: false
@@ -220,7 +222,6 @@ jhipster:
     license-url:
   security:
     content-security-policy: "default-src 'self'; frame-src 'self' data:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://storage.googleapis.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:"
-
 # ===================================================================
 # Application specific properties
 # Add your own application properties here, see the ApplicationProperties class
