--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -56,10 +56,10 @@ spring:
   #    hikari:
   #      poolName: Hikari
   #      auto-commit: false
-  #  h2:
-  #    console:
-  #      # disable spring boot built-in h2-console since we start it manually with correct configuration
-  #      enabled: false
+  h2:
+    console:
+      # disable spring boot built-in h2-console since we start it manually with correct configuration
+      enabled: false
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     url: jdbc:mariadb://localhost:3306/planty-assistant-manager
@@ -93,7 +93,9 @@ spring:
       hibernate.cache.hazelcast.use_lite_member: true
   liquibase:
     # Remove 'faker' if you do not want the sample data to be loaded automatically
-    contexts: dev, faker
+    # Changed by Hadi
+    # contexts: dev, faker
+    contexts: dev
   mail:
     # Changed by Hadi
     # host: localhost
@@ -133,7 +135,7 @@ spring:
         enabled: true
 
 server:
-  port: 8080
+  port: 38080
 
 # ===================================================================
 # JHipster specific properties
@@ -169,7 +171,7 @@ jhipster:
         token-validity-in-seconds-for-remember-me: 2592000
   mail: # specific JHipster mail property, for standard properties see MailProperties
     from: support@mail.planty.be
-    base-url: http://127.0.0.1:8080
+    base-url: http://127.0.0.1:38080
   logging:
     use-json-format: false # By default, logs are not in Json format
     logstash: # Forward logs to logstash over a socket, used by LoggingConfiguration
