--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -27,11 +27,11 @@ logging:
 #    service-url:
 #      defaultZone: http://admin:${jhipster.registry.password}@localhost:8761/eureka/
 
-management:
-  metrics:
-    export:
-      prometheus:
-        enabled: false
+#management:
+#  metrics:
+#    export:
+#      prometheus:
+#        enabled: false
 
 spring:
   devtools:
@@ -84,10 +84,10 @@ spring:
     contexts: prod
   mail:
     # Changed by Hadi
-    #        host: localhost
-    #        port: 25
-    #        username:
-    #        password:
+    # host: localhost
+    # port: 25
+    # username:
+    # password:
     host: email-smtp.us-east-1.amazonaws.com
     port: 465
     username: ${PLANTY_SMTP_USERNAME}
@@ -174,7 +174,7 @@ jhipster:
         token-validity-in-seconds-for-remember-me: 2592000
   mail: # specific JHipster mail property, for standard properties see MailProperties
     from: support@mail.planty.be
-    base-url: https://planty.ddns.net # Modify according to your server's URL
+    base-url: https://pam.planty-systems.com # Modify according to your server's URL
   logging:
     use-json-format: false # By default, logs are not in Json format
     logstash: # Forward logs to logstash over a socket, used by LoggingConfiguration
