--- a/src/main/resources/config/bootstrap-prod.yml
+++ b/src/main/resources/config/bootstrap-prod.yml
@@ -2,10 +2,16 @@
 # Spring Cloud Config bootstrap configuration for the "prod" profile
 # ===================================================================
 
+jhipster:
+  registry:
+    password: admin
+
 spring:
   cloud:
     config:
-      fail-fast: true
+      # Changed by Hadi
+      #fail-fast: true
+      fail-fast: false
       retry:
         initial-interval: 1000
         max-interval: 2000
@@ -16,7 +22,3 @@ spring:
       profile: prod # profile(s) of the property source
       label: main # toggle to switch to a different version of the configuration as stored in git
       # it can be set to any label, branch or commit of the configuration source Git repository
-
-jhipster:
-  registry:
-    password: admin
