Rearranging JHipster's generator config

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -1,52 +1,52 @@
 {
   "generator-jhipster": {
-    "promptValues": {
-      "packageName": "be.planty.assistant",
-      "nativeLanguage": "en"
-    },
-    "jhipsterVersion": "7.9.3",
     "applicationType": "monolith",
-    "baseName": "planty-assistant-manager",
-    "packageName": "be.planty.assistant",
-    "packageFolder": "be/planty/assistant",
-    "serverPort": "8080",
     "authenticationType": "jwt",
-    "cacheProvider": "hazelcast",
-    "enableHibernateCache": true,
-    "websocket": "spring-websocket",
-    "databaseType": "sql",
-    "devDatabaseType": "h2Disk",
-    "devServerPort": 4200,
-    "enableGradleEnterprise": false,
-    "pages": [],
-    "prodDatabaseType": "mariadb",
-    "reactive": false,
-    "searchEngine": false,
-    "messageBroker": false,
-    "serviceDiscoveryType": "eureka",
+    "baseName": "planty-assistant-manager",
     "blueprints": [],
     "buildTool": "maven",
-    "enableSwaggerCodegen": false,
-    "jwtSecretKey": "19a972f523f7f9b077f0f74c208399c26531fbf9",
-    "skipCheckLengthOfIdentifier": false,
-    "skipClient": false,
-    "skipFakeData": false,
-    "skipUserManagement": false,
+    "cacheProvider": "hazelcast",
     "clientFramework": "angularX",
-    "useSass": true,
     "clientPackageManager": "npm",
     "clientTheme": "none",
     "clientThemeVariant": "",
     "creationTimestamp": 1646314767843,
-    "testFrameworks": [],
-    "entities": ["Agent", "PairingRequest", "Skill"],
-    "jhiPrefix": "pam",
-    "enableTranslation": true,
-    "nativeLanguage": "en",
-    "languages": ["en"],
-    "entitySuffix": "",
+    "databaseType": "sql",
+    "devDatabaseType": "h2Disk",
+    "devServerPort": 4200,
     "dtoSuffix": "DTO",
+    "enableGradleEnterprise": false,
+    "enableHibernateCache": true,
+    "enableSwaggerCodegen": false,
+    "enableTranslation": true,
+    "entities": ["Agent", "PairingRequest", "Skill"],
+    "entitySuffix": "",
+    "jhiPrefix": "pam",
+    "jhipsterVersion": "7.9.3",
+    "jwtSecretKey": "19a972f523f7f9b077f0f74c208399c26531fbf9",
+    "languages": ["en"],
+    "messageBroker": false,
+    "nativeLanguage": "en",
     "otherModules": [],
+    "packageFolder": "be/planty/assistant",
+    "packageName": "be.planty.assistant",
+    "pages": [],
+    "prodDatabaseType": "mariadb",
+    "promptValues": {
+      "nativeLanguage": "en",
+      "packageName": "be.planty.assistant"
+    },
+    "reactive": false,
+    "searchEngine": false,
+    "serverPort": "8080",
+    "serviceDiscoveryType": "eureka",
+    "skipCheckLengthOfIdentifier": false,
+    "skipClient": false,
+    "skipFakeData": false,
+    "skipUserManagement": false,
+    "testFrameworks": [],
+    "useSass": true,
+    "websocket": "spring-websocket",
     "withAdminUi": true
   }
 }
